# Kross

./: Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Arena.css  Arena.jsx  Error.css  Error.jsx  Profile.css  Profile.jsx  Signin.css  Signin.jsx  Signup.css  Signup.jsx  idSlice.js
frontend/src/store/: store.js
src/: main.rs
src/models/: models.rs
src/repository/: database.rs
src/routes/: api.rs
