[package]
name = "Kross"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
serde = {version = "1.0.204", features = ["derive"]}
rocket_cors = "0.6.0"
uuid = {version = "1.10.0", features = ["v4", "rng"]}
dotenv = "0.15.0"

[dependencies.mongodb]
version = "3.0.1"
features = ["sync"]
